--- a/index.html
+++ b/index.html
@@ -23,12 +23,14 @@
         <div class="container">
             <nav class="main-nav">
                 <a class="studio-link" href=""><span class="web">Web</span>Studio</a>
-                <ul class="list list-zero">
-                    <li class="main-current"><a class="nav link current" href="">Студія</a></li>
-                    <li><a class="nav link" href="./portfolio.html">Портфоліо</a></li>
-                    <li><a class="nav link" href="">Контакти</a></li>
-                </ul>
-                <div class="main-nav">
+                <div class="header_nav">
+                    <ul class="list list-zero">
+                        <li class="main-current"><a class="nav link current" href="">Студія</a></li>
+                        <li><a class="nav link" href="./portfolio.html">Портфоліо</a></li>
+                        <li><a class="nav link" href="">Контакти</a></li>
+                    </ul>
+                </div>    
+                <div class="main-nav header_group">
                     <ul class="list list-one">
                         <li>
                             <a class="nav-second link" href="tel:+380961111111"
